<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBgColor"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    <TextView
        android:id="@+id/myTextView1"
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:text="@string/tv1Text"
        android:textColor="@color/textColor"
        android:textSize="14pt"
        android:gravity="center"
        android:fontFamily="@font/cambria"
        android:textStyle="bold" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_below="@id/myTextView1"
        android:background="@color/btnColor"
        android:fontFamily="@font/lucida"
        android:text="@string/btnText"
        android:textColor="@color/textColor"
         />
    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="5pt"
        android:layout_below="@id/convertButton" />

    <LinearLayout

        android:id="@+id/child1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.2"
            android:background="@color/etBgColor"
            android:fontFamily="@font/cambria"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="number"
            android:text="@string/inputText"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/oriList"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.24"
            android:entries="@array/tempList"
            android:gravity="center"
            android:prompt="@string/inputPrompt"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/myTextView2"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.12"
            android:fontFamily="@font/cambria"
            android:gravity="center"
            android:text="@string/tv2Text"
            android:textColor="@color/textColor"
            android:textSize="14pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/outputText"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.2"
            android:background="@color/etBgColor"
            android:enabled="false"
            android:fontFamily="@font/cambria"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/inputText"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/convList"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.24"
            android:entries="@array/tempList"
            android:gravity="center"
            android:prompt="@string/inputPrompt"
            android:spinnerMode="dialog" />
    </LinearLayout>>

    <LinearLayout
        android:id="@+id/child2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/child1"
        android:orientation="horizontal"
        android:layout_marginTop="5pt">


        <CheckBox
            android:id="@+id/chkRounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/chkRound"
            android:textSize="8pt" />

        <CheckBox
            android:id="@+id/chkFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chkForm"
            android:textSize="8pt" />


    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/child2"
        android:layout_marginTop="5pt"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbTemp" />
        <RadioButton
            android:id="@+id/rbDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDist"
            />

        <RadioButton
            android:id="@+id/rbWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWeight" />


    </RadioGroup>


    <ImageView
        android:id="@+id/imgFormula"
        android:layout_width="164dp"
        android:layout_height="416dp"
        android:layout_below="@id/child2"
        android:layout_marginTop="-18dp"
        android:src="@drawable/temperature"
        android:visibility="visible">

    </ImageView>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgFormula"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5pt"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/header_style"
                android:padding="5dp"
                android:text="@string/rbTemp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"


                />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="0 C" />

            <TextView
                android:id="@+id/tv13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="32 C" />

            <TextView
                android:id="@+id/tv14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="273.15K" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/header_style"
                android:padding="5dp"
                android:text="@string/rbDist"
                android:textColor="#FFFFFF"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/tv22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="1 Meter" />

            <TextView
                android:id="@+id/tv23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="39.3701 Inch" />

            <TextView
                android:id="@+id/tv24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="3.2808 feet" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/tv31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/header_style"
                android:padding="5dp"
                android:text="@string/rbWeight"
                android:textColor="#FFFFFF"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/tv32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="1 Kg" />

            <TextView
                android:id="@+id/tv33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="35.2740 ounce" />

            <TextView
                android:id="@+id/tv34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_style"
                android:padding="5dp"
                android:text="2.2045 pound" />
        </TableRow>
    </TableLayout>
</RelativeLayout>

